@@ -1,5 +1,9 @@
 2002-02-09  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* mapedit/shapefile.cc (Shape_file_set): Check 'patch', then
+	'static'.
+	* gamemap.cc: Create 'u7chunks' in 'patch' if it doesn't exist.
+
 	* gamewin.cc: Create IDENTITY for newly-developed game.
 
 2002-02-08  Tristan Tarrant  <nadir@users.sourceforge.net>
